force-app/main/default/objects/Mix__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer, who ordered that mix</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mixes</relationshipLabel>
    <relationshipName>Mixes</relationshipName>
    <type>Lookup</type>
</CustomField>