force-app/main/default/objects/Mix__c/fields/Primary_Genre__c.field-meta.xml
<CustomField>
    <fullName>Primary_Genre__c</fullName>
    <description>Moxt frequent genre of songs</description>
    <label>Primary Genre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>