force-app/main/default/objects/Mix__c/fields/Secondary_Genre__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Genre__c</fullName>
    <description>second most frequent genre of songs</description>
    <label>Secondary Genre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>