force-app/main/default/objects/Mix__c/fields/Song_Amount__c.field-meta.xml
<CustomField>
    <fullName>Song_Amount__c</fullName>
    <description>Amount of songs related to mix</description>
    <label>Song Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>